Referencing_Generator.css
* {box-sizing: border-box;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}
body {
    background-color: white;
    margin: 0px;
    margin-bottom: 50px;
}

.bigheader {
    width: 100%;
    height: 70px;
    background-color: rgb(51, 71, 255);
    border-bottom: 2px solid gray;
    text-align: center;
    color: white;
    line-height: 70px;
    margin: 0;
}

.bigheader > h1 {
    margin: 0;
}

header {
    position: sticky;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 50px;
    background-color: white;
    border-bottom: 1px solid gray;
}

/* .name {
    display: inline-block;
    width: 150px;
    height: 49px;
    margin: 0px;

}

.name > a {
    display: inline-block;
    text-align: center;
    text-decoration: none;
    width: 150px;
    height: 49px;
    line-height: 49px;
    font-size: 15px;
    border: none;
    cursor: pointer;
    background-color: white;
}
.name > a:hover {
    background-color: lightblue;
    text-decoration: underline;
} */
.header-content {
    position: absolute;
    transform: translateX(-50%);
    width: 460px;
    height: 50px;
    left: 50%;
    right: 50%;
    bottom: 0px;
    top: 0px;
}
    
header > .header-content > .header-button {
    display: inline-block;
    width: 150px;
    height: 49px;
    font-size: 15px;
    vertical-align: middle;
    text-align: center;
    color: #424242;
    text-decoration: none;
    border: none;
    cursor: pointer;
    background-color: white;
}

header > .header-content > .header-button > span {
    display: inline-block;
    vertical-align: middle;
    line-height: 49px;
}
header > .header-content > .header-button:hover {
    background-color: lightblue;
    text-decoration: underline;
}
header > .header-content > .header-button:hover > span {
    text-decoration: underline;
}

.logo {
    color: #424242;
    font-size:22px;
    font-weight:300;
}

section {
    width: 800px;
    margin: 0 auto;
}
.references {
    list-style: none;
    margin: 0 auto;
}
.references > article {
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    justify-content: space-evenly;
    color: blue; 
    width: 800px;
    height: 200px;
    border: 1px dotted gray;
    border-radius: 20px;
    margin-bottom: 10px;
}

.references > article > .edit {
    align-self: flex-end;
    margin-right: 5px;
    width: 50px;
    height: 50px;
    cursor: pointer;
    font-size: 50px;
    padding: 0;
}

.references > article > .edit > i {
    display: block;
    margin-top: -3px;
}

.reference-type {
    display: inline-block;
    width: 30%;
    height: 250px;
    border: 1px solid gray;
    border-radius: 15px;
    font-size: 25px;
    text-align: center;
    vertical-align: middle;
    font-size: 20px;
    color: rgb(115, 131, 236);
    text-decoration: none;
}
.reference-type > i{
    font-size: 200px;
    color: rgb(115, 131, 236);
}

.index-container {
    display: block;
    width: 100%;
    margin: 0 auto;
}

.reference-type:hover {
    background-color: lightblue;
}

.text {
    display: block;
    width: 100%;
    height: 50px;
    border: 1px solid gray;
    border-radius: 10px;
    padding: 0 10px;
    font-size: 20px;
    
}
.text::placeholder {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    font-style: italic;
    text-align: center;
}
.author {
    width: 395px;
    margin: 0 auto;
    margin-bottom: 5px;
    height: 50px;
    border: 1px solid gray; 
    padding: 0 10px;
    font-size: 20px;
    border-radius: 10px; 
}

.author::placeholder {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    font-style: italic;
    text-align: center;
}

.button {
    background-color: rgb(80, 150, 235);
    color: white;
    width:395px;
    height: 50px;
    border-radius: 5px;
    cursor: pointer;
    font-size: 15px;
    font-weight: 600;
    border: 1px solid rgb(80, 150, 235);
}

.button:hover {
    background-color: lightblue;
}
.button-alone {
    display: block;
    margin-left: auto;
    margin-right: auto;
    border: 1px solid rgb(80, 150, 235);
    background-color: rgb(80, 150, 235);
    color: white;
    width:395px;
    height: 50px;
    border-radius: 5px;
    cursor: pointer;
    font-size: 15px;
    font-weight: 600;

}

.button-alone:hover {
    background-color: lightblue;
}

form > input {
    margin-top: 0px;
    margin-bottom: 10px;
}
.delete {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 5px;
    margin-top: 0;
    border: 1px solid rgb(200, 50, 50);
    background-color: rgb(200,50,50);
    color: white;
    width:395px;
    height: 50px;
    border-radius: 5px;
    cursor: pointer;
    font-size: 15px;
    font-weight: 600;

}

.delete:hover {
    background-color: maroon;
}

